# cli

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rules.yaml
.github/workflows/: ci.yml  release.yml
benches/: cfg.rs  disasm.rs
docker/: Dockerfile  ebguardsh
eBPF_sample_programs/: syscall_trace.c  xdp_counter.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_elf_parse.rs
include/asm/: byteorder.h
include/bpf/: bpf_helpers.h
include/linux/: bpf.h  byteorder.h  if_ether.h  ip.h  tcp.h  types.h
samples/: socket_filter.c
scripts/: check_deps.sh  install.ps1  install.sh  uninstall.sh
src/: cli.rs  lib.rs  main.rs  repl.rs
src/analyzer/: disassembler.rs  map_tracker.rs  mod.rs  program_graph.rs  rule_engine.rs
src/builder/: mod.rs
src/loader/: bpftool.rs  elf_parser.rs  mod.rs
src/output/: formatter.rs  mod.rs
src/utils/: cache.rs  logger.rs  mod.rs
tests/: cli.rs
tests/data/: map_example.c  simple.c  xdp_pass.c
tools/demo_server/: index.html  main.rs
