[package]
name = "ebpf-guardian"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Static analyzer for eBPF programs"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ebpf-guardian"
path = "src/main.rs"

[[bin]]
name = "ebguard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
env_logger = "0.11"
goblin = "0.7"
log = "0.4"
petgraph = "0.6"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
llvm-sys = { version = "170", features = ["prefer-static"] }
which = "5.0"  # For finding executables in PATH

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true