[package]
name = "ebpf-guardian"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Static analyzer for eBPF programs"
license = "MIT OR Apache-2.0"

[lib]
name = "ebpf_guardian"
path = "src/lib.rs"

[[bin]]
name = "ebpf-guardian"
path = "src/main.rs"

[[bin]]
name = "ebguard"
path = "src/main.rs"

[features]
default = ["llvm"]
llvm = ["llvm-sys"]
scripting = ["rhai"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
env_logger = "0.11"
goblin = "0.7"
log = "0.4"
petgraph = "0.6"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
llvm-sys = { version = "170", features = ["prefer-static"], optional = true }
which = "5.0"  # For finding executables in PATH
indicatif = "0.17"
futures = "0.3"
rustyline = "14"
regex = "1"
tempfile = "3"

[dependencies.rhai]
version = "1.18"
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "cfg"
harness = false

[[bench]]
name = "disasm"
harness = false